--- a/app/public/css/all.css
+++ b/app/public/css/all.css
@@ -24,3 +24,7 @@
 .vote-instance-result-area {
   display: none;
 }
+
+.vote-instance-result-area table.not-voted td:nth-of-type(2) {
+  display: none;
+}
