--- a/app/public/css/all.css
+++ b/app/public/css/all.css
@@ -8,7 +8,8 @@
 }
 
 .vote-instance-result-area table.not-voted td:nth-of-type(2),
-.vote-instance-result-area table.not-voted th:nth-of-type(2) {
+.vote-instance-result-area table.not-voted th:nth-of-type(2),
+.vote-instance-result-area table.not-voted tfoot {
   display: none;
 }
 
