numbers next to names in results (so see order, know how many votes are in)

--- a/app/public/css/all.css
+++ b/app/public/css/all.css
@@ -15,3 +15,17 @@
   text-align  : right !important;
   font-family : "Courier New", Courier, monospace;
 }
+
+.vote-results-table {
+    counter-reset: rowNumber;
+}
+
+.vote-results-table tr {
+    counter-increment: rowNumber;
+}
+
+.vote-results-table tr td:first-child::before {
+    content: counter(rowNumber) ".";
+    min-width: 1em;
+    margin-right: 0.5em;
+}
