--- a/app/public/css/all.css
+++ b/app/public/css/all.css
@@ -6,7 +6,7 @@
 .vote-instance-result-area table.not-voted td:nth-of-type(2),
 .vote-instance-result-area table.not-voted th:nth-of-type(2),
 .vote-instance-result-area table.not-voted tfoot {
-  display : none !important;
+  display : none;
 }
 
 .vote-results-table tbody tr:nth-child(even) td,
