--- a/app/public/css/all.css
+++ b/app/public/css/all.css
@@ -3,9 +3,10 @@
 .not-setup .room-area,
 .not-setup .hamburger,
 .done-setup .setup-area,
-.poll-instance-result-area table.not-voted td:nth-of-type(2),
-.poll-instance-result-area table.not-voted th:nth-of-type(2),
-.poll-instance-result-area table.not-voted tfoot {
+.poll-results-table.not-voted td:nth-of-type(2),
+.poll-results-table.not-voted th:nth-of-type(2),
+.poll-results-table.not-voted tfoot,
+.poll-results-summary-table.not-voted {
   display : none;
 }
 
