--- a/css/vt.css
+++ b/css/vt.css
@@ -13,10 +13,10 @@ body {
 .not-setup .room-area,
 .not-setup .hamburger,
 .done-setup .setup-area,
-.poll-results-table.not-voted .result-val,
-.poll-results-table.voted .result-placeholder,
-.poll-results-table.not-voted tfoot,
-.poll-results-summary-table.not-voted {
+.not-voted .poll-results-table .result-val,
+.voted .poll-results-table .result-placeholder,
+.not-voted .poll-results-table tfoot,
+.not-voted .poll-results-summary-table {
   display : none;
 }
 
