--- a/vt/platforms/android/res/xml/config.xml
+++ b/vt/platforms/android/res/xml/config.xml
@@ -10,6 +10,9 @@
     <feature name="SocialSharing">
         <param name="android-package" value="nl.xservices.plugins.SocialSharing" />
     </feature>
+    <feature name="WebIntent">
+        <param name="android-package" value="com.borismus.webintent.WebIntent" />
+    </feature>
     <name>Voting Thing</name>
     <description>
         Create polls and vote amongst friends.
