--- a/vt/platforms/android/res/xml/config.xml
+++ b/vt/platforms/android/res/xml/config.xml
@@ -22,4 +22,5 @@
     </author>
     <content src="index.html" />
     <access origin="*" />
+    <preference name="AndroidLaunchMode" value="singleTask" />
 </widget>
