--- a/css/vt.css
+++ b/css/vt.css
@@ -62,12 +62,6 @@ body {
 }
 
 .vt-loading .ui-icon-refresh::after {
-  -webkit-animation-name            : rotate;
-  -webkit-animation-duration        : 1.5s;
-  -webkit-animation-iteration-count : infinite;
-  -webkit-animation-timing-function : linear;
-  animation-name            : rotate;
-  animation-duration        : 1.5s;
-  animation-iteration-count : infinite;
-  animation-timing-function : linear;
+  -webkit-animation : rotate 1.5s infinite;
+  animation         : rotate 1.5s infinite;
 }
