Refactors + fix issue with device.uuid not being in uuid format.

--- a/vt/platforms/android/res/xml/config.xml
+++ b/vt/platforms/android/res/xml/config.xml
@@ -28,5 +28,5 @@
     </author>
     <content src="index.html" />
     <access origin="*" />
-    <preference name="AndroidLaunchMode" value="singleTask" />
+    <preference name="AndroidLaunchMode" value="singleTop" />
 </widget>
