--- a/css/vt.css
+++ b/css/vt.css
@@ -8,10 +8,6 @@ body {
   -webkit-user-select      : none; /* prevent copy paste, to allow, change 'none' to 'text' */
 }
 
-.ui-content {
-  padding-top: 0;
-}
-
 .ui-focus,
 .ui-btn:focus {
   /* See http://stackoverflow.com/questions/16972701/how-to-remove-the-blue-halo-glow-from-jquery-mobile-input-elements-that-receive */
@@ -25,6 +21,15 @@ body {
   background-color: #e1f0cd;
   border-color: #e1f0cd;
   color: #000000;
+}
+
+/* Remove for when in room: */
+.ui-content {
+  padding-top: 0;
+}
+/* Re-add for setup area: */
+.setup-area {
+  padding-top: 1em;
 }
 
 .poll {
