--- a/vt/platforms/android/res/xml/config.xml
+++ b/vt/platforms/android/res/xml/config.xml
@@ -23,6 +23,10 @@
     <feature name="Toast">
         <param name="android-package" value="nl.xservices.plugins.Toast" />
     </feature>
+    <feature name="StatusBar">
+        <param name="android-package" value="org.apache.cordova.statusbar.StatusBar" />
+        <param name="onload" value="true" />
+    </feature>
     <name>Voting Thing</name>
     <description>
         Create polls and vote amongst friends.
@@ -33,4 +37,6 @@
     <content src="index.html" />
     <access origin="*" />
     <preference name="AndroidLaunchMode" value="singleTask" />
+    <preference name="StatusBarOverlaysWebView" value="false" />
+    <preference name="StatusBarBackgroundColor" value="#007035" />
 </widget>
